Modify CR_Copulas.Rmd for output and table styling
Updated the output options and added self_contained to the R Markdown document. Adjusted the table creation and styling for better presentation.

--- a/.github/workflows/CR_Copulas.Rmd
+++ b/.github/workflows/CR_Copulas.Rmd
@@ -9,7 +9,7 @@ output:
     highlight: pygments
     toc_float:
       collapsed: no
-    self_contained: false
+    self_contained: true
 link-citations: yes
 classoption: fleqn
 #runtime: shiny
@@ -130,3 +130,4 @@ reactable(
 )
 ))
 ```
+
