--- a/.github/workflows/CR_Copulas.Rmd
+++ b/.github/workflows/CR_Copulas.Rmd
@@ -66,6 +66,26 @@ library(htmltools)
 
 data <- read.csv2("./table.csv", header = TRUE, sep = ";")
 
+# Add new papers published after June 30, 2024
+new_rows <- data.frame(
+  authors = c("Gelis-Cadena K, Daniels M, Siddique J", "Crommen G, Deresa NW, D’Haen M, Ding J, Willems I, Van Keilegom I"),
+  year = c(2025, 2025),
+  title = c("A Bayesian Nonparametric Approach for Semi-Competing Risks with Application to Cardiovascular Health", "Recent advances in copula-based methods for dependent censoring"),
+  paper = c("https://arxiv.org/pdf/2506.20860", "https://www.idescat.cat/sort/sort491/49.1.1.Crommen-etal.pdf"),
+  model = c("non", "several"),
+  truncation = c("", "left"),
+  censoring = c("right", "right"),
+  field = c("Survival", "Survival"),
+  type = c("D-vine Gaussian", "Arch Gaussian"),
+  type_covariates = c("yes", "yes"),
+  code = c("no", "yes"),
+  datasets = c("yes", "yes"),
+  simulation = c("no", "yes"),
+  CR_type = c("semi-CR", "Cens")
+)
+
+data <- rbind(data, new_rows)
+
 # Create a reactable table
 htmltools::browsable(
   tagList(
@@ -130,5 +150,6 @@ reactable(
 )
 ))
 ```
+
 
 
