--- a/CR_Copulas.Rmd
+++ b/CR_Copulas.Rmd
@@ -49,7 +49,7 @@ Explanation of table column names:
 + **censoring** type of censoring
 + **model** type of marginal survival functions used; `ML` - Machine learning, `non` - non-parametric, `par` - parametric model.
 + **field** Field of study `survival`, `meta analysis` or `reliability`
-+ **type** copula type, including `Arch` - Archimidean, `H Arch` - hierarchical Acrhimidean, `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern, Frank, `AMH` - Ali-Mikhail-Haq.
++ **type** copula type, including `Arch` - Archimidean, `H Arch` - hierarchical Acrhimidean, `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern,  `AMH` - Ali-Mikhail-Haq.
 + **covariates** whether covariates are used or not
 + **code** availability of code used to generate results
 + **authors** name of author(s) (hidden)
@@ -150,3 +150,4 @@ reactable(
 )
 ))
 ```
+
