--- a/CR_Copulas.Rmd
+++ b/CR_Copulas.Rmd
@@ -44,20 +44,21 @@ This table has been created as part of the manuscript: **Competing risk models u
 ## Explanation of the table columns
 Explanation of table column names:
 
-+ **title** title of the paper
++ ** Author(s)** author(s) of the article
++ **title** title of the article
 + **truncation** type of truncation
 + **censoring** type of censoring
-+ **model** type of marginal survival functions used; `ML` - Machine learning, `non` - non-parametric, `par` - parametric model.
-+ **field** Field of study `survival`, `meta analysis` or `reliability`
-+ **type** copula type, including `Arch` - Archimidean, `H Arch` - hierarchical Acrhimidean, `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern,  `AMH` - Ali-Mikhail-Haq.
++ **Estimation** type of estimation use, `ML` - maximum likelihood, `CG` - copula graphics, `Bayesian`, `Cox` - Cox regression.
++ **Domain** Field of study `Survival`, `Actuarial`, `Econometrics`, `Social sciences`, `Hydrology`, `Reliability`, or `Others`
++ **Copula_type** copula type, including `Arch` - if Archimidean is used in general,  `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern,  `AMH` - Ali-Mikhail-Haq.
 + **covariates** whether covariates are used or not
 + **code** availability of code used to generate results
 + **authors** name of author(s) (hidden)
 + **year** year the article was published (hidden)
-+ **paper** link to the paper (hidden)
++ **paper_url** link to the paper (hidden)
 + **dataset** Whether real dataset(s) were utilised (hidden)
 + **simulation** Whether simulation study was utilised (hidden)
-+ **CR type** type of CR: `CR` - for latent CR type; `CR-observ` - Observable quantities type of CR; `semi-CR` - latent type CR in which a non-terminal event ca be censored by a terminal event, and `Cens` - dependent censoring type of analysis.
++ **CR_type** type of CR: `CR` - for latent CR type; `CR-Obs` - Observable quantities type of CR; `semi-CR` - latent type CR in which a non-terminal event ca be censored by a terminal event, and `Cens` - dependent censoring type.
 
 \noindent \textbf{Note:} **Visible** columns are displayed in the interactive table interface. **Hidden** columns are not displayed by default. Columns can be filtered, arranged in ascending/descending order. Entries can be searched in the interactive table and it contains 181 articles on competing risks models using copulas.
 
@@ -152,6 +153,7 @@ reactable(
 )
 ))
 ```
+
 
 
 
