--- a/CR_Copulas.Rmd
+++ b/CR_Copulas.Rmd
@@ -42,21 +42,22 @@ cache=FALSE,size='tiny',comment='',fig.width=8,fig.height=4.5,options(width = 70
 This table has been created as part of the manuscript: **Competing risk models using copulas: A comprehensive review** with the aim of consolidating articles that has covered CR models using copulas. The provision of open-source and well-documented software is essential to ensure the widespread adoption of new statistical methods. Reproducibility is crucial in the development and evaluation of new methods. The table provides such details, and was constructed using R package: *reactable* (Lin, 2023).
 
 ## Explanation of the table columns
+
 + ** Author(s)** author(s) of the article
 + **title** title of the article
 + **truncation** type of truncation
 + **censoring** type of censoring
-+ **Estimation** type of estimation use, `ML` - maximum likelihood, `CG` - copula graphics, `Bayesian`, `Cox` - Cox regression.
-+ **Domain** Field of study `Survival`, `Actuarial`, `Econometrics`, `Social sciences`, `Hydrology`, `Reliability`, or `Others`
-+ **Copula_type** copula type, including `Arch` - if Archimidean is used in general,  `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern,  `AMH` - Ali-Mikhail-Haq, `Symm` - Symmetric copulas.
++ **estimation** type of estimation use, `ML` - maximum likelihood, `CG` - copula graphics, `Bayesian`, `Cox` - Cox regression
++ **domain** Field of study `Survival`, `Actuarial`, `Econometrics`, `Social sciences`, `Hydrology`, `Reliability`, or `Others`
++ **Copula_type** copula type, including `Arch` - if Archimidean is used in general,  `Gaus` - Gaussian, `FGM` - Farlie–Gumbel–Morgenstern,  `AMH` - Ali-Mikhail-Haq, `Symm` - Symmetric copulas
 + **covariates** whether covariates are used or not
 + **code** availability of code used to generate results
 + **authors** name of author(s) (hidden)
 + **year** year the article was published (hidden)
-+ **paper_url** link to the paper (hidden)
++ **paper url** link to the paper (hidden)
 + **dataset** Whether real dataset(s) were utilised (hidden)
 + **simulation** Whether simulation study was utilised (hidden)
-+ **CR_type** type of CR: `CR` - for latent CR type; `CR-Obs` - Observable quantities type of CR; `semi-CR` - latent type CR in which a non-terminal event ca be censored by a terminal event, and `Cens` - dependent censoring type.
++ **CR type** type of CR: `CR` - for latent CR type; `CR-Obs` - Observable quantities type of CR; `semi-CR` - latent type CR in which a non-terminal event ca be censored by a terminal event, and `Cens` - dependent censoring type.
 
 \noindent \textbf{Note:} **Visible** columns are displayed in the interactive table interface. **Hidden** columns are not displayed by default. Columns can be filtered, arranged in ascending/descending order. Entries can be searched in the interactive table and it contains 181 articles on competing risks models using copulas.
 
@@ -151,6 +152,7 @@ reactable(
 )
 ))
 ```
+
 
 
 
