--- a/CR_Copulas.Rmd
+++ b/CR_Copulas.Rmd
@@ -39,11 +39,11 @@ cache=FALSE,size='tiny',comment='',fig.width=8,fig.height=4.5,options(width = 70
 
 ## Introduction
 
-This table has been created as part of the manuscript: **Competing risk models using copulas: A comprehensive review** with the aim of consolidating articles that has covered CR models using copulas. The provision of open-source and well-documented software is essential to ensure the widespread adoption of new statistical methods. Reproducibility is crucial in the development and evaluation of new methods. The table provides such details, and was constructed using R package: *reactable* (Lin, 2023).
+This table has been created as part of the manuscript: **Competing risk models using copulas: A comprehensive review** with the aim of consolidating articles that has covered CR models using copulas. The table provides such details, and was constructed using R package: *reactable* (Lin, 2023).
 
 ## Explanation of the table columns
-
 Explanation of table columns:
+
 + **Author(s)** author(s) of the article
 + **title** title of the article
 + **truncation** type of truncation
@@ -153,6 +153,7 @@ reactable(
 )
 ))
 ```
+
 
 
 
